# hexapod-grid-sim

./: .gitignore  README.md  pyproject.toml  run_grid.cmd  run_single.cmd  run_tests.cmd
src/hexapod_grid_sim/: __init__.py  main.py  main_grid.py
src/hexapod_grid_sim/config/: parameters.py
src/hexapod_grid_sim/constraints/: __init__.py  constraint_set.py
src/hexapod_grid_sim/grid/: __init__.py  hexapod_unit.py  propagation.py  topology.py
src/hexapod_grid_sim/physics/: __init__.py  solver.py
src/hexapod_grid_sim/ui/: node_editor.py  tactical_ops.py  window_config.py
src/hexapod_grid_sim/visualization/: grid_viewer.py  single_viewer.py
tests/: test_constraints.py  test_edge_cases.py  test_grid.py  test_physics.py
